[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/DialogBox.png" type="Texture" id=1]
[ext_resource path="res://assets/Font/font5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/DialogNext.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/DialogBox_2.gd" type="Script" id=4]
[ext_resource path="res://assets/Audio/dialogue.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="DialogBox" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -60.0
margin_right = 136.0
margin_bottom = -12.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -8.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "asdfjkasdfjkasdfjkasdfjkasdfjkasdfjkasdfjk"
text = "asdfjkasdfjkasdfjkasdfjkasdfjkasdfjkasdfjk"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = -15.0
margin_right = 281.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 263, 41 )
texture = ExtResource( 3 )

[node name="TimerNext" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="TimerText" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="TimerNext" to="." method="_on_TimerNext_timeout"]
[connection signal="timeout" from="TimerText" to="." method="_on_TimerText_timeout"]
